# playwright-tutorial

./: .gitignore  indeed_job_listings.xlsx  instructions.txt  playwright_scraping_indeed.py  pyproject.toml
