[project]
name = "playwright-tutorial"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "agentql>=1.17.1",
    "aiofiles>=25.1.0",
    "bs4>=0.0.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "patchright>=1.57.2",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "sniffio>=1.3.1",
    "tf-playwright-stealth>=1.2.0",
    "tzdata>=2025.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "nbdime>=4.0.2",
    "ruff>=0.6.1",
]

[tool.ruff]
# What to check
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # docstring first line imperative
    "UP",   # pyupgrade
]

# Rules to ignore
lint.ignore = [
    "T201", # allow print()
    "UP006", # keep using typing.List etc.
    "UP007", # allow Union[X, Y]
    "UP035", # ignore Self type suggestion
    "D417",  # don't require param docs
    "E501",  # ignore line length
    "D101",  # ignore docstring for these labs
    "D103",  # ignore docstring for these labs
    "D202",  # ignore extra space after docstring requirement
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
